# docs/swagger.yaml
@@ -12,6 +12,35 @@ definitions:
       userId:
         type: integer
     type: object
+  domain.Content:
+    properties:
+      aspect:
+        type: string
+      category:
+        type: string
+      content:
+        type: string
+      createdAt:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      playtime:
+        type: string
+      resolution:
+        type: string
+      tag:
+        type: boolean
+      thumbnail:
+        type: string
+      updatedAt:
+        type: string
+      userId:
+        type: integer
+    type: object
   domain.ErrorDetail:
     properties:
       error_code:
@@ -236,6 +265,107 @@ paths:
       summary: Edit an book
       tags:
       - book
+  /api/v1/contents:
+    get:
+      consumes:
+      - application/json
+      description: Get contents
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Content'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - Bearer: []
+      summary: Get contents
+      tags:
+      - content
+    post:
+      consumes:
+      - application/json
+      description: Create an content
+      parameters:
+      - description: name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: thumbnail
+        in: formData
+        name: thumbnail
+        required: true
+        type: file
+      - description: content
+        in: formData
+        name: content
+        required: true
+        type: file
+      - description: description
+        in: formData
+        name: description
+        required: true
+        type: string
+      - description: playtime
+        in: formData
+        name: playtime
+        required: true
+        type: string
+      - description: resolution
+        in: formData
+        name: resolution
+        required: true
+        type: string
+      - description: aspect
+        in: formData
+        name: aspect
+        required: true
+        type: string
+      - description: tag
+        in: formData
+        name: tag
+        required: true
+        type: boolean
+      - description: category
+        in: formData
+        name: category
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      security:
+      - Bearer: []
+      summary: Create an content
+      tags:
+      - content
   /api/v1/users:
     post:
       consumes:
